--- a/Account/Login.cshtml
+++ b/Account/Login.cshtml
@@ -11,37 +11,21 @@
         var up = Request["uPwd"].Trim();
 
 
-        var db = Database.Open("Checking_Master");
+        var db = Database.Open("razorC");
 
-        String password = helper.md5(up);
-        var sqlSelect = "Select [Admin_Id] " +
-        ",[Password]" +
-        ",[Active]" +
-        ",[Account_Id]" +
-        ",[Account_Type]" +
-        ",[Username]" +
-        ",Id_Country from Tbl_Admins_ t1 inner join Accounting t2 on t1.Account_Id = t2.Id_Accounting where Username=@0 and Password=@1";
-        var data = db.QuerySingle(sqlSelect, un, password);
+        String password = helper.md5(up);       
+        var sqlSelect = "Select * from rc_Login where rcUser=@0 and rcPwd=@1";
+        var data = db.QuerySingle(sqlSelect, un, up);
 
         if (data != null)
         {
-            UserLogin login = new UserLogin();
-            login.UserId = data.Admin_Id;
-            login.Username = un;
-            login.Active = data.Active;
-            login.AccountId = data.Account_Id;
-            login.FromCountry = data.Id_Country;
-            login.Accounttype = data.Account_Type;
-
-            Session.Add("loginData", login);
             FormsAuthentication.RedirectFromLoginPage(un, false);
         }
         else
         {
             message = "No user found";
-        }
-        
-    }
+        }      
+    }    
 }
 <!DOCTYPE html>
 <html>
@@ -65,17 +49,16 @@
         <div id="top">
             <div class="wrapper">
                 <a href="#" title="" class="logo">
-                    <img src="~/rcAdmin/images/logo.png" alt="" />
-                </a>
+                    <img src="~/rcAdmin/images/logo.png" alt="" /></a>
 
                 <!-- Right top nav -->
                 <div class="topNav">
                     <a href="~/Default" class="top">Back To Your Site</a>
                     @*<ul class="userNav">
-                            <li><a href="#" title="" class="screen"></a></li>
-                            <li><a href="#" title="" class="settings"></a></li>
-                            <li><a href="#" title="" class="logout"></a></li>
-                        </ul>*@
+                        <li><a href="#" title="" class="screen"></a></li>
+                        <li><a href="#" title="" class="settings"></a></li>
+                        <li><a href="#" title="" class="logout"></a></li>
+                    </ul>*@
                 </div>
                 <div class="clear"></div>
             </div>
@@ -85,8 +68,7 @@
             <form method="post" action="">
                 <div class="loginPic">
                     <a href="#" title="">
-                        <img src="../rcAdmin/images/administrator_icon.png" alt="" />
-                    </a>
+                        <img src="../rcAdmin/images/administrator_icon.png" alt="" /></a>
                     <span>Administrator</span>
                     <div class="loginActions">
                         <div><a href="#" title="Change user" class="logleft flip"></a></div>
