--- a/rcAdmin/_Menu.cshtml
+++ b/rcAdmin/_Menu.cshtml
@@ -26,6 +26,7 @@
                 <li><a href="~/rcAdmin/ForwardingCountries" id="forwardingcountry">Forwarding Country</a></li>
                 <li><a href="~/rcAdmin/ForwardingZone" id="forwardingZone">Forwarding Zone</a></li>
                 <li><a href="~/rcAdmin/ForwardingQuotation" id="forwardingQuotation">Forwarding Quotation</a></li>
+                <li><a href="~/rcAdmin/ForwardingFSC" id="forwardingFsc">Forwarding FSC</a></li>
                 <li><a href="~/rcAdmin/ForwardingServices" id="forwardingservice">Forwarding Service</a></li>
                 <li><a href="~/rcAdmin/ForwardingMAWB" id="forwardingmawb">Forwarding MAWB</a></li>
                 <li><a href="~/rcAdmin/ForwardingInvoice" id="forwardinginvoice">Forwarding Invoice</a></li>
