--- a/rcAdmin/HandlingFee/Edit.cshtml
+++ b/rcAdmin/HandlingFee/Edit.cshtml
@@ -19,7 +19,10 @@
     var Weight_From = data.Weight_From;
     var Weight_To = data.Weight_To;
     var Handling_Fee = data.Handling_Fee;
+    var Id_Forwarding_Service = data.Id_Forwarding_Service;
+    String sql = "select * from Forwarding_Service";
 
+    var fwServiceData = db.Query(sql);
     if (IsPost)
     {
         Validation.RequireField("Weight_From", Constants_.INPUT_A_FLOAT_VALUE);
@@ -27,12 +30,11 @@
         Validation.RequireField("Handling_Fee", Constants_.INPUT_A_DECIMAL_VALUE);
         try
         {
-
             Handling_Fee_Type = int.Parse(Request["Handling_Fee_Type"]);
             Weight_From = Request["Weight_From"];
             Weight_To = Request["Weight_To"];
-            Handling_Fee = Request["Handling_Fee"];    
-
+            Handling_Fee = Request["Handling_Fee"];
+            Id_Forwarding_Service = Request["Id_Forwarding_Service"];
         }
         catch(Exception e) {
             errMSG = Constants_.UPDATE_TRANSACTION_FAIL;
@@ -42,8 +44,8 @@
 
         if (!Request["btnUpdate"].IsEmpty())
         {
-            String sqlUpdate = "Update Handling_Fee set Handling_Fee_Type = @0,Weight_From=@1,Weight_To=@2,Handling_Fee=@3 where Id_Handing_Fee=@4";
-            db.Execute(sqlUpdate, Handling_Fee_Type, Weight_From, Weight_To, Handling_Fee, pId);
+            String sqlUpdate = "Update Handling_Fee set Handling_Fee_Type = @0,Weight_From=@1,Weight_To=@2,Handling_Fee=@3,Id_Forwarding_Service=@4 where Id_Handing_Fee=@5";
+            db.Execute(sqlUpdate, Handling_Fee_Type, Weight_From, Weight_To, Handling_Fee, Id_Forwarding_Service, pId);
             errMSG = Constants_.UPDATE_SUCCESS;
         }
         
@@ -106,39 +108,52 @@
                 @*@errMSG
                 Edited: @pEditDate*@
                 <div class="formRow">
-                    <div class="grid3"><label for="pName">Hangling fee Type:</label></div>
+                    <div class="grid3"><label for="pName">Forwarding Service:</label></div>
                     <div class="grid9">
                         <div class="selector">
-                            <select id="Handling_Fee_Type" class="selectReq" name="Handling_Fee_Type" @Validation.For("Handling_Fee_Type")>
-                                <option value="0" @if (Handling_Fee_Type == 0)
-                                                  { <text> selected="selected" </text>       }>Fixed</option>
-                                <option value="1" @if (Handling_Fee_Type == 1)
-                                                  { <text> selected="selected" </text>        }>Transhipments</option>
-                            </select>
+                            <select id="Id_Forwarding_Service" class="selectReq" onchange="requireWeight(this.form);" name="Id_Forwarding_Service" @Validation.For("Id_Forwarding_Service")>
+                                @foreach (var f in fwServiceData)
+                                {
+                                    <option value="@f.Id_Forwarding_Service" @if (Id_Forwarding_Service == f.Id_Forwarding_Service) { <text> selected="selected" </text>                           }>@f.Forwarding_Service_Name</option>
+                                }
+                            </select>  @Html.ValidationMessage("pMasterPage")
                         </div>
+
                     </div>
-                    <div class="clear"></div>
+                    </div>
+                    <div class="formRow">
+                        <div class="grid3"><label for="pName">Hangling fee Type:</label></div>
+                        <div class="grid9">
+                            <div class="selector">
+                                <select id="Handling_Fee_Type" class="selectReq" name="Handling_Fee_Type" @Validation.For("Handling_Fee_Type")>
+                                    <option value="0" @if (Handling_Fee_Type == 0) { <text> selected="selected" </text>        }>Fixed</option>
+                                    <option value="1" @if (Handling_Fee_Type == 1) { <text> selected="selected" </text>         }>Transhipments</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="formRow">
+                        <div class="grid3"><label for="pMasterPage">Weight From:</label></div>
+                        <div class="grid9"><input type="text" name="Weight_From" id="Weight_From" value="@Weight_From" maxlength="250" /></div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="formRow">
+                        <div class="grid3"><label for="pTitle">Weight_To:</label></div>
+                        <div class="grid9"><input type="text" name="Weight_To" id="Weight_To" value="@Weight_To" maxlength="250" /></div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="formRow">
+                        <div class="grid3"><label for="pBody">Handling Fee</label></div>
+                        <div class="grid9"><input type="text" name="Handling_Fee" id="Handling_Fee" value="@Handling_Fee" maxlength="250" /></div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="formRow">
+                        <input type="submit" name="btnUpdate" value="Update" class="buttonM bBlue formSubmit" />
+                        <div class="clear"></div>
+                    </div>
                 </div>
-                <div class="formRow">
-                    <div class="grid3"><label for="pMasterPage">Weight From:</label></div>
-                    <div class="grid9"><input type="text" name="Weight_From" id="Weight_From" value="@Weight_From" maxlength="250" /></div>
-                    <div class="clear"></div>
-                </div>
-                <div class="formRow">
-                    <div class="grid3"><label for="pTitle">Weight_To:</label></div>
-                    <div class="grid9"><input type="text" name="Weight_To" id="Weight_To" value="@Weight_To" maxlength="250" /></div>
-                    <div class="clear"></div>
-                </div>
-                <div class="formRow">
-                    <div class="grid3"><label for="pBody">Handling Fee</label></div>
-                    <div class="grid9"><input type="text" name="Handling_Fee" id="Handling_Fee" value="@Handling_Fee" maxlength="250" /></div>
-                    <div class="clear"></div>
-                </div>
-                <div class="formRow">
-                    <input type="submit" name="btnUpdate" value="Update" class="buttonM bBlue formSubmit" />
-                    <div class="clear"></div>
-                </div>
-            </div>
+
         </fieldset>
     </form>
 </div>
